# SyncProject

./: .dockerignore  .gitignore  README.md  database_dump.sql  ngrok.yml  pyproject.toml  pytest.ini  requirement.txt  requirements.txt  todo
,github/workflows/: test.yml
.github/workflows/: ubuntu-latest-run-tests.yml
app/: _logger.py  config.py  database.py  exc_handlers.py  main.py
app/auth/: auth.py  dependencies.py  router.py  schemas.py
app/common/: dao.py  schema.py
app/departments/: dao.py  models.py  router.py  schemas.py
app/employeedepartments/: dao.py  models.py  schemas.py
app/employees/: dao.py  dependencies.py  models.py  router.py  schemas.py
app/files/: dao.py  models.py  router.py  schemas.py
app/migration/: env.py
app/projects/: dao.py  models.py  router.py  schemas.py
app/releases/: dao.py  models.py  router.py  schemas.py
app/roles/: models.py
app/schedules/: dao.py  models.py  router.py  schemas.py
app/statuses/: dao.py  models.py  router.py  schemas.py
app/taskfiles/: dao.py  models.py
app/tasks/: dao.py  models.py  router.py  (+1 more)
database/: model.py  session.py
docs/: Информация о проекте Приложение для удаленной работы.docx  Таблица активности. Приложение для удаленной работы.xlsx
scripts/: restore_db.sh  setup_db.sh
tests/: common.py  conftest.py  db_test_init.sql  test_admin.py  test_auth.py  test_departments.py  test_employees.py  test_main_endpoints.py  test_meetings.py  test_projects.py  test_releases.py  test_root.py  test_schedules.py  test_statuses.py  test_tasks.py  test_vacations.py  test_workhours.py
(+121 files in other folders)
